--- a/Dice Roll/styles.css
+++ b/Dice Roll/styles.css
@@ -32,3 +32,25 @@
   font-weight: 400;
   font-style: normal;
 }
+
+#refresh-btn {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #232931;
+  cursor: pointer;
+  border: 3px solid;
+  border-color: #004AAD;
+  padding: 0.25em 0.5em;
+  box-shadow: #232931 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  
+  position: relative;
+  touch-action: manipulation;
+}
+
+#refresh-btn:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
