--- a/To-do List/styles.css
+++ b/To-do List/styles.css
@@ -1,20 +1,18 @@
 body {
     text-align: center;
-    background-color: #283149;
     font-family: "Reddit Mono";
   }
 
 h1 {
-  font-size: 5rem;
-  color: #DBEDF3;
+  font-size: 250%;
+  color: #2d8cab;
   font-family: "Reddit Mono";
-  text-shadow: 3px 0  red;
   padding: 20px;
 }
 
 
 label {
-  color: #DBEDF3;
+  color: #2d8cab;
   font-family: "Reddit Mono";
   padding: 5px;
 }
@@ -23,7 +21,7 @@ button {
   border: none;
   padding: 5px 10px;
   text-align: center;
-  background-color: #DBEDF3;
+  background-color: #2d8cab;
   display: inline-block;
   font-size: 16px;
   margin: 1px 1px;
@@ -36,10 +34,9 @@ button {
   padding: 4px 4px;
   font-size: 16px;
   line-height: 0.4;
-  background-color: #283149;
+  background-color: #2d8cab;
 }
 
 .btn-xs:hover {
-  background-color: #DBEDF3;
-    box-shadow: 3px 0  red;
+  background-color: red;
 }
